[package]
name = "db_server_test_rc"
version = "0.1.0"
authors = ["nuts-rice <msis44443@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
rocket_codegen = "0.4.7"
diesel = {version = "1.4", features = ["postgres"]}
dotenv = "0.15.0"
r2d2-diesel = "1.0"
r2d2 = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
env_logger = "0.5"
log = "0.4"

[dependencies.rocket_contrib]
version = "*"
default_features = false
features = ["json"]